--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,25 @@
 <html>
     <head>
         <title>Graduate Project 2014</title>
+            <link rel="stylesheet" type="text/css" href="style.css"></link>
+            <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <script type="text/javascript" src="client.js"></script>
-        Hello world!
-    </body>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
+        <script type="text/javascript" src="js/viewmodels/IndexViewModel.js"></script>
+        <script type="text/javascript" src="js/WebSocketClient.js"></script>
+        <!--<script type="text/javascript" src="js/GameClient.js"></script>-->
+        
+        <div id="Content">
+            <h1>Welcome to the Game</h1>
+            <span>
+                <input type="text" data-bind="value: userName"/>
+                <button type="button" data-bind="click: connectWebSocket">Connect</button>
+                <div id="messageArea" data-bind="foreach: serverMessages">
+                    <div data-bind="text: $data"></div>
+                </div>
+                <!--<p id="connectMessage" data-bind="visible: connectionStatus() != null, text:connectionStatus"></p>-->
+            </span>
+        </div>
 </html>
