Added more unit tests

--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,9 @@
     <body>
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
-        <script type="text/javascript" src="js/viewmodels/IndexViewModel.js"></script>
-        <script type="text/javascript" src="js/WebSocketClient.js"></script>
+        <script data-main="scripts/main" src="scripts/require.js"></script>
+        <!--<script type="text/javascript" src="scripts/viewmodels/IndexViewModel.js"></script>-->
+        <!--<script type="text/javascript" src="scripts/WebSocketClient.js"></script>-->
         <!--<script type="text/javascript" src="GameServer.js"></script>-->
         
         <!--<script type="text/javascript" src="js/GameClient.js"></script>-->
