--- a/Client/html/index.html
+++ b/Client/html/index.html
@@ -4,6 +4,8 @@
         <title>Graduate Project 2014</title>
             <link rel="stylesheet" type="text/css" href="style.css"></link>
             <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     </head>
     <body>
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -22,6 +24,9 @@
                     <select id="answerArea" data-bind="options: questionOptions, optionsText: 'text', optionsValue: 'id', value: selectedAnswer"></select>
                     <button data-bind="click: sendAnswer, enable: activeQuestion">Send Answer</button>
                 </span>
+            </div>
+            <div id="userList" data-bind="foreach: userList">
+                <div data-bind="text: $data"></div>
             </div>
             <div id="messageArea" data-bind="foreach: serverMessages">
                 <div data-bind="text: $data"></div>
