--- a/Client/html/index.html
+++ b/Client/html/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Graduate Project 2014</title>
-        <link rel="stylesheet" type="text/css" href="style.css"></link>
+        <link rel="stylesheet" type="text/css" href="styles/index.css"></link>
         <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -43,10 +43,11 @@
             <div id="messageArea" data-bind="foreach: serverMessages">
                 <div data-bind="text: $data"></div>
             </div>
-            <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-            <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
-            <script type="text/javascript" src="scripts/viewmodels/IndexViewModel.js"></script>
-            <script type="text/javascript" src="scripts/WebSocketClient.js"></script>
+            <script data-main="scripts/index.js" src="scripts/require.js"></script>
+            <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>-->
+            <!--<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>-->
+            <!--<script type="text/javascript" src="scripts/viewmodels/IndexViewModel.js"></script>-->
+            <!--<script type="text/javascript" src="scripts/WebSocketClient.js"></script>-->
         </div>
     </body>
 </html>
