Cleaned up some code to pass JSHint

--- a/Client/html/game.html
+++ b/Client/html/game.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="game-container" data-bind:"game: 'foo'">
+            <div class="game-container">
                 <div class="tile-container"></div>
                 <div class="grid-container">
                     <div class="grid-row">
