Refactored project to allow for more logical build process. Client code now exists in src file and can be built using grunt. Included a readme file and updated yml file to reflect refactor.

--- a/Client/game.html
+++ b/Client/game.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>The Game</title>
-        <link rel="stylesheet" type="text/css" href="styles/game.css"></link>
+        <link rel="stylesheet" type="text/css" href="css/game.css"></link>
     </head>
     <body>
         <div class="container">
@@ -43,6 +43,6 @@
             </div>
         </div>
        
-        <script data-main="scripts/game.js" src="scripts/require.js"></script>
+        <script data-main="js/game-min.js" src="js/require.js"></script>
     </body>
 </html>
