--- a/Client/index.html
+++ b/Client/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Graduate Project 2014</title>
-        <link rel="stylesheet" type="text/css" href="styles/index.css"></link>
+        <link rel="stylesheet" type="text/css" href="css/index.css"></link>
         <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         
