Updated index page to conform to refactoring

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -86,10 +86,10 @@
     </div>
     </div>
             
-        <script data-main="scripts/index.js" src="scripts/require.js"></script>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-        <script src="./scripts/lib/bootstrap-hover-dropdown-master/bootstrap-hover-dropdown.min.js"></script>
+        <script data-main="js/index.js" src="js/require.js"></script>
+        <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
+        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> -->
+        <!-- <script src="./js/lib/bootstrap-hover-dropdown-master/bootstrap-hover-dropdown.min.js"></script> -->
         <!--<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>-->
         <!--<script type="text/javascript" src="scripts/viewmodels/IndexViewModel.js"></script>-->
         <!--<script type="text/javascript" src="scripts/WebSocketClient.js"></script>-->
