Added basic functionality to allow for multiplayer games

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -34,43 +34,40 @@
                 </table> 
             </div>
 
-            <div class="col-xs-8" data-bind="stopBinding: true">
-
-                <div class="game-view-container">
-                    <div class="game-container">
-                        <div class="tile-container"></div>
-                        <div class="grid-container">
-                            <div class="grid-row">
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                            </div>
-                            <div class="grid-row">
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                            </div>
-                            <div class="grid-row">
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                            </div>
-                            <div class="grid-row">
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                                <div class="grid-cell"></div>
-                            </div>
+            <div class="col-xs-8">
+                <div class="game-container">
+                    <div class="tile-container"></div>
+                    <div class="grid-container">
+                        <div class="grid-row">
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
+                        </div>
+                        <div class="grid-row">
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
+                        </div>
+                        <div class="grid-row">
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
+                        </div>
+                        <div class="grid-row">
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
+                            <div class="grid-cell"></div>
                         </div>
                     </div>
-                    <div class="game-info-container">
-                        <div class="player-turn" data-bind="text: playerTurnString()"></div>
-                        <div class="red-score" data-bind="text: redScore"></div>
-                        <div class="blue-score" data-bind="text: blueScore"></div>
-                    </div>
+                </div>
+                <div class="game-info-container" data-bind="visible:gameActive">
+                    <div class="player-turn" data-bind="text: playerTurnString()"></div>
+                    <div class="red-score" data-bind="text: redScore"></div>
+                    <div class="blue-score" data-bind="text: blueScore"></div>
                 </div>
             </div>
 
