Added trophy icons to leaderboard

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -14,7 +14,7 @@
                <table class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th id="leaderboardHeader" colspan="2">Leader Board</th>
+                            <th id="leaderboardHeader" colspan="2">Leaderboard</th>
                         </tr>
                         <tr>
                             <th>Rank</th><th>User</th><th>Win %</th>
@@ -23,7 +23,7 @@
                     <tbody data-bind="foreach: leaderBoard">
 
                         <tr data-bind="event: {mouseover: $parent.toggleStats, mouseout: $parent.toggleStats }, visible: $index() < 10">
-                            <td data-bind="text: $index() + 1"></td>
+                            <td><span data-bind="text: $index() + 1"></span> <span data-bind="if: ($index() < 3)"><img data-bind="attr: { src: 'img/trophy-'+($index()+1)+'.png' }"></img></span></td>
                             <td data-bind="text: userName"></td>
                             <td data-bind="text: gamesPlayed === 0 ? 0.0.toFixed(2) : (100 * wins / gamesPlayed).toFixed(2)"></td>
                         </tr>
