--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -38,7 +38,10 @@
             </div>
 
             <div class="col-md-6 col-lg-6">
-                <div class="game-title">Tiler</div>
+                <div class="game-title">
+                    <img class='logo' src="img/tiler_logo.png"/>
+                    <span>Tiler</span>
+                </div>
                 <div class="game-container">
                     <div class="tile-container"></div>
                     <div class="grid-container">
