Added game rules

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -76,6 +76,7 @@
                     <div class="red-score" data-bind="text: redScore"></div>
                     <div class="blue-score" data-bind="text: blueScore"></div>
                 </div>
+                <div class="game-rules"><h1>How to play</h1><p>Combine tiles of your colour to lose points. The first lose all of their points will win! If there are no more places for tiles to spawn, the game will end and whoever has the lowest score will win.</p></div>
                 <div class="chat-game" data-bind="visible: gameActive">
                     <div class="chat-bar-game" data-bind="visible: gameActive">
                         <form>
