Updated game rules description on index.html

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -77,7 +77,13 @@
                     <div class="player-1-score" data-bind="text: player1Score"></div>
                     <div class="player-2-score" data-bind="text: player2Score"></div>
                 </div>
-                <div class="game-rules"><h1>How to play</h1><p>Combine tiles of the same colour to lose points. The first to lose all of their points will win!<br/>If there are no more places for tiles to spawn, the game will end and whoever has the lowest score will win.</p></div>
+                <div class="game-rules">
+                    <h1>How to play</h1>
+                    <p>Use the arrow keys (or swipe the screen in a direction) to move the board.</p>
+                    <p>Combine tiles of the same colour to lose points. The first to lose all of their points will win!</p>
+                    <p>If you combine tiles on your turn, you will be able to move again.</p>
+                    <p>If there are no more places for tiles to spawn, the game will end and whoever has the lowest score will win.</p>
+                </div>
             </div>
 
             <div class="col-md-3 col-lg-2">
