--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -15,7 +15,7 @@
                     <span class="game-title">Tiler</span>
                 </div>                        
                 <form class="user-bar">
-                    <input class="username-input form-control" type="text" data-bind="value: userName, valueUpdate: 'afterkeydown'" placeholder="Please log in"/>
+                    <input class="username-input form-control" type="text" data-bind="value: userName, valueUpdate: 'afterkeydown'" placeholder="Enter Username"/>
                     <button type="submit" class="btn btn-primary" data-bind="click: connectWebSocket, enable: userName">Join Lobby</button>
                 </form>
            </div>     
@@ -26,8 +26,8 @@
                 <div class="col-lg-1 show-lg"></div>
                 <div class="col-md-3 col-lg-2 hidden-xs hidden-sm">
                    <table class="table table-hover leaderboard">
-                        <thead style="background-color: #F8F1E9">
-                            <tr>
+                        <thead>
+                            <tr style="background-color: #F8F1E9">
                                 <th id="leaderboardHeader" colspan="3">Leaderboard</th>
                             </tr>
                             <tr>
@@ -74,18 +74,12 @@
                 </div>
                 <div class="col-md-3 col-lg-2">
                     <div class="user-info-container">
-                        <div class="user-info">
+                            <div style='background-color: #F8F1E9';>
+                                <div class="username-display">Connected as <span data-bind="text: userName"></span></div>
+                                <div class="user-list-header">Users Currently Online</div>
+                             </div>
+                        <div class="user-info">     
                             <table class="table table-hover">
-                                <thead>
-                                    <tr>
-                                        <th colspan="2">
-                                            <div class="username-display">Connected as <span data-bind="text: userName"></span></div>
-                                        </th>
-                                    </tr>
-                                    <tr>
-                                        <th class="user-list-header" colspan="2">Users Currently Online</th>
-                                    </tr>
-                                </thead>
                                 <tbody data-bind="foreach: userList">
                                     <tr data-bind="visible: userName !== $parent.userName()" style = 'display: none'>
                                         <td data-bind="text: userName"></td>
@@ -97,7 +91,7 @@
                         </div>
                     </div>
                     <div class="panel panel-default">
-                        <div class="panel-heading"><h3 class="panel-title">Global chat</h3></div>
+                        <div class="panel-heading" style="background-color: #F8F1E9"><h3 class="panel-title">Chat</h3></div>
                         <div class="panel-body">
                             <div class="chat-lobby">
                                 <div class="chat-window-lobby-wrapper">
