--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -64,9 +64,15 @@
                             </div>
                         </div>
                         <div class="game-info-container" data-bind="visible:gameActive">
-                            <div class="player-turn" data-bind="text: playerTurnString()"></div>
-                            <div class="player-1-score" data-bind="text: player1Score"></div>
-                            <div class="player-2-score" data-bind="text: player2Score"></div>
+                            <div class="player">
+                                <div class="player-name" data-bind="text: players()[0], style: {opacity: playerTurnName() == players()[0] ? 1 : 0.2  } "></div>
+                                <div class="player-1-score" data-bind="text: player1Score, style: {opacity: playerTurnName() == players()[0] ? 1 : 0.2}"></div>
+                            </div>
+                            <!--<div class="player-turn" data-bind="text: playerTurnString()"></div>-->
+                            <div class="player">   
+                                <div class="player-name" data-bind="text: players()[1], style: {opacity: playerTurnName() == players()[1] ? 1 : 0.2  } "></div>
+                                <div class="player-2-score" data-bind="text: player2Score, style: {opacity: playerTurnName() == players()[1] ? 1 : 0.2}"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="game-rules">
