--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <div class="panel panel-default">
-                        <div class="panel-heading" style="background-color: #F8F1E9"><h3 class="panel-title">Chat</h3></div>
+                        <div class="panel-heading" style="background-color: #F8F1E9"><h3 class="panel-title">Lobby Chat</h3></div>
                         <div class="panel-body">
                             <div class="chat-lobby">
                                 <div class="chat-window-lobby-wrapper">
