--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -116,7 +116,7 @@
                         </div>
                         <div class="panel-footer">
                             <form class="chat-bar-lobby form-inline">
-                                <input class="lobbyChatInput form-control" type='text' data-bind="value:lobbyChatMessage, hasFocus: lobbyChatSelected "></input>
+                                <input class="lobbyChatInput form-control" type='text' data-bind="value:lobbyChatMessage"></input>
                                 <button type='submit' class="btn btn-primary" data-bind="click: sendlobbyChatMessage">Send</button>
                             </form>
                         </div>
