Fixed bug where win/loss banner appears over instructions

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -51,7 +51,7 @@
                     </table> 
                 </div>
     
-                <div class="col-md-6 col-lg-6">
+                <div class="middle-column col-md-6 col-lg-6">
                     <div class="game-title-lobby">
                         <img class='logo' src="img/tiler_logo.png"/>
                         <span class="game-title">Tiler</span>
